--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <button>login</button>
 <button>sign up</button>
-
+<a href="quiz1.html">
+    <button>Start Quiz</button>
+</a>
 </body>
 </html>
