--- a/quiz1.html
+++ b/quiz1.html
@@ -56,77 +56,127 @@
 
                     <div class="question">
                         <h2>Where was Jackson Pollock born?</h2>
-                            <input type="radio" id="q1-op1" name="answer1" value="answer1-op1"> <label for="q1-op1">
-                                <p>New York, America</p>
-                            </label>
-                            <input type="radio" id="q1-op2" name="answer1" value="answer1-op2"> <label for="q1-op2">
-                                <p>Wyoming, America</p>
-                            </label>
-                            <input type="radio" id="q1-op3" name="answer1" value="answer1-op3"> <label for="q1-op3">
-                                <p>San Diego, America</p>
-                            </label>
-                            <input type="radio" id="q1-op4" name="answer1" value="answer1-op4"> <label for="q1-op4">
-                                <p>London, United Kingdom</p>
-                            </label>
+                        <input type="radio" id="q1-op1" name="answer1" value="answer1-op1"> <label for="q1-op1">
+                            <p>New York, America</p>
+                        </label>
+                        <input type="radio" id="q1-op2" name="answer1" value="answer1-op2"> <label for="q1-op2">
+                            <p>San Diego, America</p>
+                        </label>
+                        <!-- correct answer -->
+                        <input type="radio" id="q1-op3" name="answer1" value="answer1-op3"> <label for="q1-op3">
+                            <p>Wyoming, America</p>
+                        </label>
+                        <input type="radio" id="q1-op4" name="answer1" value="answer1-op4"> <label for="q1-op4">
+                            <p>London, United Kingdom</p>
+                        </label>
                     </div>
 
                     <div class="question">
-                        <h2>Question2?</h2>
-                        <input type="radio" id="q1-op1" name="answer2" value="answer1-op1">
-                        <label for="q1-op1"></label><br>
-                        <input type="radio" id="q1-op2" name="answer2" value="answer1-op2">
-                        <label for="q1-op2"></label><br>
-                        <input type="radio" id="q1-op3" name="answer2" value="answer1-op3">
-                        <label for="q1-op3"></label><br>
-                        <input type="radio" id="q1-op4" name="answer2" value="answer1-op4">
-                        <label for="q1-op4"></label><br>
+                        <h2>How old was Jackson Pollock when he moved to New York to become an artist?</h2>
+                        <input type="radio" id="q2-op1" name="answer2" value="answer2-op1">
+                        <label for="q2-op1">
+                            <p>16</p>
+                        </label>
+                        <input type="radio" id="q2-op2" name="answer2" value="answer2-op2">
+                        <label for="q2-op2">
+                            <p>21</p> 
+                        </label>
+                        <!-- correct answer -->
+                        <input type="radio" id="q2-op3" name="answer2" value="answer2-op3">
+                        <label for="q2-op3">
+                            <p>18</p>
+                        </label>
+                        <input type="radio" id="q2-op4" name="answer2" value="answer2-op4">
+                        <label for="q2-op4">
+                            <p>30</p>
+                        </label>
                     </div>
 
-                    <div>Question3?<br>
-                        <input type="radio" id="q1-op1" name="answer3" value="answer1-op1">
-                        <label for="q1-op1"></label><br>
-                        <input type="radio" id="q1-op2" name="answer3" value="answer1-op2">
-                        <label for="q1-op2"></label><br>
-                        <input type="radio" id="q1-op3" name="answer3" value="answer1-op3">
-                        <label for="q1-op3"></label><br>
-                        <input type="radio" id="q1-op4" name="answer3" value="answer1-op4">
-                        <label for="q1-op4"></label><br>
+                    <div class="question">
+                        <h2>What did Jackson Pollock pour onto the Canvas</h2>
+                        <!-- correct answer -->
+                        <input type="radio" id="q3-op1" name="answer3" value="answer3-op1">
+                        <label for="q3-op1">
+                            <p>Coffee, because he was tired</p>
+                        </label>
+                        <input type="radio" id="q3-op2" name="answer3" value="answer3-op2">
+                        <label for="q3-op2">
+                            <p>Paint which reflected his feelings</p>
+                        </label>
+                        <input type="radio" id="q3-op3" name="answer3" value="answer3-op3">
+                        <label for="q3-op3">
+                            <p>Water to wet the canvas</p>
+                        </label>
+                        <input type="radio" id="q3-op4" name="answer3" value="answer3-op4">
+                        <label for="q3-op4">
+                            <p>Ink to create textures</p>
+                        </label>
                     </div>
 
-                    <div>Question4?<br>
-                        <input type="radio" id="q1-op1" name="answer4" value="answer1-op1">
-                        <label for="q1-op1"></label><br>
-                        <input type="radio" id="q1-op2" name="answer4" value="answer1-op2">
-                        <label for="q1-op2"></label><br>
-                        <input type="radio" id="q1-op3" name="answer4" value="answer1-op3">
-                        <label for="q1-op3"></label><br>
-                        <input type="radio" id="q1-op4" name="answer4" value="answer1-op4">
-                        <label for="q1-op4"></label><br>
+                    <div class="question">
+                        <h2>What is Jackson Pollocks style of painting called?</h2>
+                        <input type="radio" id="q4-op1" name="answer4" value="answer4-op1">
+                        <label for="q4-op1">
+                            <p>Surrealism</p>
+                        </label>
+                        <input type="radio" id="q4-op2" name="answer4" value="answer4-op2">
+                        <label for="q4-op2">
+                            <p>Messy</p>
+                        </label>
+                        <!-- correct answer -->
+                        <input type="radio" id="q4-op3" name="answer4" value="answer4-op3">
+                        <label for="q4-op3">
+                            <p>Abstract Expressionism</p>
+                        </label>
+                        <input type="radio" id="q4-op4" name="answer4" value="answer4-op4">
+                        <label for="q4-op4">
+                            <p>Impressionism</p>
+                        </label>
                     </div>
 
-                    <div>Question5?<br>
-                        <input type="radio" id="q1-op1" name="answer5" value="answer1-op1">
-                        <label for="q1-op1"></label><br>
-                        <input type="radio" id="q1-op2" name="answer5" value="answer1-op2">
-                        <label for="q1-op2"></label><br>
-                        <input type="radio" id="q1-op3" name="answer5" value="answer1-op3">
-                        <label for="q1-op3"></label><br>
-                        <input type="radio" id="q1-op4" name="answer5" value="answer1-op4">
-                        <label for="q1-op4"></label><br>
+                    <div class="question">
+                        <h2>What unconventional tool did Jackson Pollock often use to create his paintings?</h2>
+                        <input type="radio" id="q5-op1" name="answer5" value="answer5-op1">
+                        <label for="q5-op1">
+                            <p>Paintbrush</p>
+                        </label>
+                        <!-- correct answer -->
+                        <input type="radio" id="q5-op2" name="answer5" value="answer5-op2">
+                        <label for="q5-op2">
+                            <p>Drip stick</p>
+                        </label>
+                        <input type="radio" id="q5-op3" name="answer5" value="answer5-op3">
+                        <label for="q5-op3">
+                            <p>Palette knife</p>
+                        </label>
+                        <input type="radio" id="q5-op4" name="answer5" value="answer5-op4">
+                        <label for="q5-op4">
+                            <p>Feather quill</p>
+                        </label>
                     </div>
 
-                    <div>Question6?<br>
-                        <input type="radio" id="q1-op1" name="answer6" value="answer1-op1">
-                        <label for="q1-op1"></label><br>
-                        <input type="radio" id="q1-op2" name="answer6" value="answer1-op2">
-                        <label for="q1-op2"></label><br>
-                        <input type="radio" id="q1-op3" name="answer6" value="answer1-op3">
-                        <label for="q1-op3"></label><br>
-                        <input type="radio" id="q1-op4" name="answer6" value="answer1-op4">
-                        <label for="q1-op4"></label><br>
+                    <div class="question">
+                        <h2>What nickname is often associated with Jackson Pollock due to his energetic and physical painting style?</h2>
+                        <input type="radio" id="q6-op1" name="answer6" value="answer6-op1">
+                        <label for="q6-op1">
+                            <p>Splashmaster</p>
+                        </label>
+                        <!-- correct answer -->
+                        <input type="radio" id="q6-op2" name="answer6" value="answer6-op2">
+                        <label for="q6-op2">
+                            <p>Jack the dripper</p>
+                        </label>
+                        <input type="radio" id="q6-op3" name="answer6" value="answer6-op3">
+                        <label for="q6-op3">
+                            <p>Art Dynamo</p>
+                        </label>
+                        <input type="radio" id="q6-op4" name="answer6" value="answer6-op4">
+                        <label for="q6-op4">
+                            <p>Paint Maverick</p>
+                        </label>
                     </div>
 
-                    <div class="item1">
+                    <div class="score">
                         <p><a href="#" onClick="scoreQuiz(); return false;"><p>Show my score: <input name="score" type="text" size="30" maxlength="40" readonly="yes">
                         </a></p>
                     </div>
@@ -134,7 +184,6 @@
             </section>
             
             <section class="footer">
-                <h4> About us</h4>
                 <p> Thanks for taking part</p>
             
                 <i class="fa fa-facebook-official" aria-hidden="true"></i>
